--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "shad-clone",
+  "type": "module",
   "version": "1.0.0",
   "description": "Library of Web Components mimicking the style of shadcn.",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.19.1"
+  }
 }
